@@ -1,35 +1,43 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id("org.beryx.runtime") version "2.0.0"
 }
+
 
 repositories {
     mavenCentral()
+    maven { url "https://repo1.maven.org/maven2/" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
-    // --- Test ---
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 
-    // --- Apache POI per Excel ---
+
     implementation 'org.apache.poi:poi:5.4.1'
     implementation 'org.apache.poi:poi-ooxml:5.4.1'
 
-    // --- SQLite JDBC driver ---
-    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
 
-    // --- Commons Lang (aggiornato per patch sicurezza CVE-2025-48924) ---
     implementation 'org.apache.commons:commons-lang3:3.18.0'
 
-    implementation 'ch.qos.logback:logback-classic:1.4.11'
-
+    implementation 'ch.qos.logback:logback-core:1.5.19'
     implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
     implementation 'org.apache.logging.log4j:log4j-api:2.24.2'
+    implementation 'org.xerial:sqlite-jdbc:3.46.1.0'
+}
+
+application {
+    mainClass.set('matibbajava.Main')
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
 }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(24)
     }
 }
 
@@ -38,9 +46,11 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
-application {
-    // Imposta la tua classe principale (quella che estende Application)
-    mainClass = 'matibbajava.App'
+
+tasks.named('shadowJar') {
+    archiveBaseName.set('GCB')
+//    archiveVersion.set('1.0')
+    archiveClassifier.set('') // toglie il suffisso "-all"
 }
 
 tasks.named('test') {
